# llmchar-viz

./: .gitignore  Makefile  README.md  index.html  pyproject.toml
config/: experiment.yaml  misalign.yaml  models.yaml  prod_prompts.yaml  prompts.yaml  tiers.yaml
data/: char_specs.json  wiki_cache.json
data/canonical/: aliases.yaml  characters.yaml
deploy/: pages.yml
scripts/: serve.py
src/llmchar/: __init__.py  budget.py  cache.py  canonical.py  cli.py  config.py  matrix.py  openrouter.py  parse.py  prompts.py  runner.py  schema.py
src/llmchar_viz/: __init__.py  build.py  classify_characters.py  db.py
src/llmchar_viz/canon/: build_aliases.py
src/llmchar_viz/embed/: behavior.py  characters.py  explanations.py
src/llmchar_viz/etl/: common.py  load_base.py  load_phase0.py  load_phase2.py
src/llmchar_viz/prodgen/: run_prodbare.py
web/: app.js  index.html
web/db/: db.worker.js  loader.js
web/lib/: charts.js  coloring.js  dom.js  traits.js  url_state.js
web/styles/: app.css  tokens.css
web/views/: char_features.js  char_map.js  expl_map.js  explorer.js  landing.js  model_picks.js  picks.js  prodbare.js  similarity.js  top_picks.js
